Adjust nupkg path

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,4 @@ jobs:
           VERSION=$(echo ${{ github.ref_name }} | cut -c2-)
           dotnet pack --configuration Release /p:Version=$VERSION
       - name: Publish to NuGet
-        run: dotnet nuget push *.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json 
+        run: dotnet nuget push /home/runner/work/MarvelApiClient/MarvelApiClient/MarvelApiClient/bin/Release/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json 
